--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^7.6.0",
     "react-router-hash-link": "^2.4.3",
     "react-tabs": "^6.0.2",
+    "react-toastify": "^11.0.5",
     "tailwind-scrollbar-hide": "^1.3.1"
   },
   "devDependencies": {
