--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "leaflet": "^1.9.4",
     "maplibre-gl": "^5.5.0",
     "prop-types": "^15.8.1",
